--- a/src/main/resources/es/diegofeblesseoane/pkgame/registro.fxml
+++ b/src/main/resources/es/diegofeblesseoane/pkgame/registro.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="background" stylesheets="@CSS/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="background" stylesheets="@CSS/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="412.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Registro" textAlignment="CENTER" wrappingWidth="455.3800048828125" />
       <Line endX="562.5" layoutX="640.0" layoutY="131.0" startX="-526.5" stroke="#060446" strokeWidth="3.0" />
@@ -15,7 +15,7 @@
       <TextField fx:id="textFieldNombreUsuario" layoutX="190.0" layoutY="286.0" prefHeight="36.0" prefWidth="899.0" styleClass="textField" />
       <Text layoutX="582.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Contraseña" textAlignment="CENTER" wrappingWidth="114.25499725341797" />
       <Line endX="562.5" layoutX="623.0" layoutY="759.0" startX="-526.5" stroke="#060446" strokeWidth="3.0" />
-      <Button fx:id="buttonRegistro" layoutX="559.0" layoutY="687.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="164.0" text="Registrarse" />
+      <Button fx:id="buttonRegistro" layoutX="559.0" layoutY="687.0" mnemonicParsing="false" onAction="#onRegistroCompletadoClick" prefHeight="53.0" prefWidth="164.0" text="Registrarse" />
       <PasswordField fx:id="passwordFieldContrasenia" layoutX="187.0" layoutY="371.0" prefHeight="36.0" prefWidth="905.0" styleClass="textField" />
       <TextField fx:id="textFieldNombreUsuario1" layoutX="190.0" layoutY="192.0" prefHeight="36.0" prefWidth="899.0" styleClass="textField" />
       <Text layoutX="559.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Nombre" textAlignment="CENTER" wrappingWidth="164.25499725341797" />
