--- a/src/main/resources/es/diegofeblesseoane/pkgame/registro.fxml
+++ b/src/main/resources/es/diegofeblesseoane/pkgame/registro.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="background" stylesheets="@CSS/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="background" stylesheets="@CSS/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.diegofeblesseoane.pkgame.backend.controller.RegistroController">
    <children>
       <Text layoutX="412.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="Registro" textAlignment="CENTER" wrappingWidth="455.3800048828125" />
       <Line endX="562.5" layoutX="640.0" layoutY="131.0" startX="-526.5" stroke="#060446" strokeWidth="3.0" />
